# DDA

./: README.md  lizard_result.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: feature_request.md
resources/: aim.yaml  progress.yaml
src/: _main.py  main.py
src/dda/: __init__.py  config.yaml  main.py  sub_main.py
src/dda/draw/: aim.py  progress.py
src/dda/yaml/: set.py
summary/: 00_preface.md  01_00_data_system.md  01_01_realiable_scalable_maintable_applications.md  01_02_data_models_and_query_languages.md  01_03_storage_and_retrieval.yaml  01_04_encoding_and_evolution.md  02_05_replication.md  02_06_partitioning.md  02_07_transactions.md  02_08_the_trouble_with_distributed_systems.md  02_distributed_data.md  find.sh
tests/dda/yaml/: test_set.py
tmp_files/: main.progress.yaml  main.set_main.yaml
