[project]
name = "dda"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "makinzm", email = "hello@hello.hello" }
]
dependencies = [
    "matplotlib>=3.7.2",
    "pandas>=2.0.3",
    "pyyaml>=6.0",
    "numpy>=1.24.4",
    "setuptools>=68.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.0",
]

[tool.hatch.metadata]
allow-direct-references = true
